k8s/prod/robsond-service.yml
apiVersion: v1
kind: Service
metadata:
  name: robsond-service
  namespace: robson-v2
  labels:
    app: robsond
    version: v2
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: robsond
    version: v2
